conflict 해소를 위한 revert