@@ -2,30 +2,24 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Stream;
 
-@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
-@Repository
 public class FileUserRepository implements UserRepository {
     private final Path DIRECTORY;
-    private final String EXTENSION = ".ser";
+    private final String EXTENSION;
 
-    public FileUserRepository(
-            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
-    ) {
-        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, User.class.getSimpleName());
-        if (Files.notExists(DIRECTORY)) {
+    public FileUserRepository() {
+        this.DIRECTORY = Path.of("USER");
+        this.EXTENSION = ".ser";
+        if (!DIRECTORY.toFile().exists()) {
             try {
                 Files.createDirectories(DIRECTORY);
             } catch (IOException e) {
@@ -34,94 +28,81 @@ public class FileUserRepository implements UserRepository {
         }
     }
 
-    private Path resolvePath(UUID id) {
-        return DIRECTORY.resolve(id + EXTENSION);
-    }
-
     @Override
     public User save(User user) {
-        Path path = resolvePath(user.getId());
-        try (
-                FileOutputStream fos = new FileOutputStream(path.toFile());
-                ObjectOutputStream oos = new ObjectOutputStream(fos)
-        ) {
+        Path path = DIRECTORY.resolve(user.getId() + EXTENSION);
+        try (FileOutputStream fos = new FileOutputStream(path.toFile());
+             ObjectOutputStream oos = new ObjectOutputStream(fos)) {
             oos.writeObject(user);
+            oos.flush();
+            return user;
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        return user;
     }
 
     @Override
     public Optional<User> findById(UUID id) {
-        User userNullable = null;
-        Path path = resolvePath(id);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                userNullable = (User) ois.readObject();
-            } catch (IOException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
+        Path path = DIRECTORY.resolve(id + EXTENSION);
+        try (FileInputStream fis = new FileInputStream(path.toFile());
+             ObjectInputStream ois = new ObjectInputStream(fis)) {
+            User user = (User) ois.readObject();
+            return Optional.of(user);
+        } catch (IOException | ClassNotFoundException e) {
+            throw new RuntimeException(e);
         }
-        return Optional.ofNullable(userNullable);
-    }
-
-    @Override
-    public Optional<User> findByUsername(String username) {
-        return this.findAll().stream()
-                .filter(user -> user.getUsername().equals(username))
-                .findFirst();
     }
 
     @Override
     public List<User> findAll() {
-        try (Stream<Path> paths = Files.list(DIRECTORY)) {
-            return paths
-                    .filter(path -> path.toString().endsWith(EXTENSION))
-                    .map(path -> {
-                        try (
-                                FileInputStream fis = new FileInputStream(path.toFile());
-                                ObjectInputStream ois = new ObjectInputStream(fis)
-                        ) {
-                            return (User) ois.readObject();
-                        } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException(e);
-                        }
-                    })
-                    .toList();
+        if (Files.isDirectory(DIRECTORY)) {
+            try {
+                List<User> users = Files.list(DIRECTORY)
+                        .filter(path -> path.toString().endsWith(EXTENSION))
+                        .map(paths -> {
+                                    try (FileInputStream fis = new FileInputStream(paths.toFile());
+                                         ObjectInputStream ois = new ObjectInputStream(fis)) {
+                                        User user = (User) ois.readObject();
+                                        return user;
+                                    } catch (IOException | ClassNotFoundException e) {
+                                        throw new RuntimeException(e);
+                                    }
+                                }
+                        )
+                        .toList();
+                return users;
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        return new ArrayList<>();
+    }
+
+    @Override
+    public long count() {
+        try (Stream<Path> stream = Files.list(DIRECTORY)) {
+            return stream.filter(path -> (path.toString().endsWith(EXTENSION))).count();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public User delete(UUID id) {
+        Path path = DIRECTORY.resolve(id + EXTENSION);
+        try {
+            User user = findById(id).orElseThrow(() -> new RuntimeException("사용자에서 해당 " + id + "를 찾을 수 없습니다."));
+            Files.deleteIfExists(path);
+            return user;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
     }
 
     @Override
     public boolean existsById(UUID id) {
-        Path path = resolvePath(id);
+        Path path = DIRECTORY.resolve(id + EXTENSION);
         return Files.exists(path);
-    }
-
-    @Override
-    public void deleteById(UUID id) {
-        Path path = resolvePath(id);
-        try {
-            Files.delete(path);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public boolean existsByEmail(String email) {
-        return this.findAll().stream()
-                .anyMatch(user -> user.getEmail().equals(email));
-    }
-
-    @Override
-    public boolean existsByUsername(String username) {
-        return this.findAll().stream()
-                .anyMatch(user -> user.getUsername().equals(username));
     }
 }
